novo exe. aceitando as notas da vfs sem retenção

--- a/leitor_dos_arquivos_edsson.ipynb
+++ b/leitor_dos_arquivos_edsson.ipynb
@@ -17,8 +17,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "essencialmente só colocar o dir da pasta na função que ele faz um csv com a informação"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,15 +124,22 @@
     "                        linhas = (chave,cnpj_prestador,cnpj_tomador,valor_servico,numero_nota,data,email_tomador,email_prestador,empresa_tomador,empresa_prestador,codigo_tributacao,irrf)\n",
     "                        writer.writerow(linhas)\n",
     "    except:\n",
-    "        print('tomougap')\n",
+    "        print('não foi possível ler todos os dados')\n",
     "            \n",
     "                #(r\"C:/Users/jvict/Documents/seven/seven/seguenotasfiscais2quinzenadedezembropnz/LAZARO SEGUNDA QUINZENA DE DEZEMBRO SABADO.pdf\")\n",
     "            \n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "teste"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -231,35 +245,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "26111012236240873000119000000000000924018790 36.240.873/0001-19 10.580.938/0005-05 R$900,00 9 02/01/2024 - NENEBENE1@HOTMAIL.COM BERNEVALDORIBEIROGOMES74792350468 NENEBENE1@HOTMAIL.COM PROGRESSOLOGISTICAETRANSPORTELTDA 16.02.01\n",
-      "26111012252685890000116000000000000924016396 52.685.890/0001-16 10.580.938/0005-05 R$540,00 9 02/01/2024 - DANIELPNZVIDROS@GMAIL.COM 52.685.890DANIELRODRIGUESSILVABEZERRA DANIELPNZVIDROS@GMAIL.COM PROGRESSOLOGISTICAETRANSPORTELTDA 16.02.01\n",
-      "26111012252685890000116000000000000824013952 52.685.890/0001-16 10.580.938/0005-05 R$2.700,00 8 02/01/2024 - DANIELPNZVIDROS@GMAIL.COM 52.685.890DANIELRODRIGUESSILVABEZERRA DANIELPNZVIDROS@GMAIL.COM PROGRESSOLOGISTICAETRANSPORTELTDA 16.02.01\n",
-      "26111012252685890000116000000000000824013952 52.685.890/0001-16 10.580.938/0005-05 R$2.700,00 8 02/01/2024 - DANIELPNZVIDROS@GMAIL.COM 52.685.890DANIELRODRIGUESSILVABEZERRA DANIELPNZVIDROS@GMAIL.COM PROGRESSOLOGISTICAETRANSPORTELTDA 16.02.01\n",
-      "26111012252685890000116000000000000824013952 52.685.890/0001-16 10.580.938/0005-05 R$2.700,00 8 02/01/2024 - DANIELPNZVIDROS@GMAIL.COM 52.685.890DANIELRODRIGUESSILVABEZERRA DANIELPNZVIDROS@GMAIL.COM PROGRESSOLOGISTICAETRANSPORTELTDA 16.02.01\n",
-      "26111012252685890000116000000000000824013952 52.685.890/0001-16 10.580.938/0005-05 R$2.700,00 8 02/01/2024 - DANIELPNZVIDROS@GMAIL.COM 52.685.890DANIELRODRIGUESSILVABEZERRA DANIELPNZVIDROS@GMAIL.COM PROGRESSOLOGISTICAETRANSPORTELTDA 16.02.01\n",
-      "26111012252685890000116000000000000824013952 52.685.890/0001-16 10.580.938/0005-05 R$2.700,00 8 02/01/2024 - DANIELPNZVIDROS@GMAIL.COM 52.685.890DANIELRODRIGUESSILVABEZERRA DANIELPNZVIDROS@GMAIL.COM PROGRESSOLOGISTICAETRANSPORTELTDA 16.02.01\n",
-      "26051522207246464000121000000000002424010697 07.246.464/0001-21 10.580.938/0005-05 R$1.205,15 24 02/01/2024 SECRETARIA@ADTSA.COM.BR CONT.CONTABIL@YAHOO.COM.BR 07.246.464MARCOSJOSECOELHO CONT.CONTABIL@YAHOO.COM.BR PROGRESSOLOGISTICAETRANSPORTELTDA 16.02.01\n",
-      "26051522207246464000121000000000002424010697 07.246.464/0001-21 10.580.938/0005-05 R$1.205,15 24 02/01/2024 SECRETARIA@ADTSA.COM.BR CONT.CONTABIL@YAHOO.COM.BR 07.246.464MARCOSJOSECOELHO CONT.CONTABIL@YAHOO.COM.BR PROGRESSOLOGISTICAETRANSPORTELTDA 16.02.01\n",
-      "26051522207246464000121000000000002424010697 07.246.464/0001-21 10.580.938/0005-05 R$1.205,15 24 02/01/2024 SECRETARIA@ADTSA.COM.BR CONT.CONTABIL@YAHOO.COM.BR 07.246.464MARCOSJOSECOELHO CONT.CONTABIL@YAHOO.COM.BR PROGRESSOLOGISTICAETRANSPORTELTDA 16.02.01\n",
-      "26051522207246464000121000000000002424010697 07.246.464/0001-21 10.580.938/0005-05 R$1.205,15 24 02/01/2024 SECRETARIA@ADTSA.COM.BR CONT.CONTABIL@YAHOO.COM.BR 07.246.464MARCOSJOSECOELHO CONT.CONTABIL@YAHOO.COM.BR PROGRESSOLOGISTICAETRANSPORTELTDA 16.02.01\n",
-      "26051522207246464000121000000000002424010697 07.246.464/0001-21 10.580.938/0005-05 R$1.205,15 24 02/01/2024 SECRETARIA@ADTSA.COM.BR CONT.CONTABIL@YAHOO.COM.BR 07.246.464MARCOSJOSECOELHO CONT.CONTABIL@YAHOO.COM.BR PROGRESSOLOGISTICAETRANSPORTELTDA 16.02.01\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "leitor('C:/Users/jvict/Documents/seven/seven/seguenotasfiscais2quinzenadedezembropnz')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
