--- a/leitor_dos_arquivos_edsson.ipynb
+++ b/leitor_dos_arquivos_edsson.ipynb
@@ -538,18 +538,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Não foi possível ler o arquivo\n",
-      "Não foi possível ler o arquivo\n",
-      "Não foi possível ler o arquivo\n",
-      "Não foi possível ler o arquivo\n",
-      "lido com sucesso\n",
-      "lido com sucesso\n",
-      "lido com sucesso\n",
-      "lido com sucesso\n",
-      "lido com sucesso\n",
-      "lido com sucesso\n",
-      "lido com sucesso\n",
-      "lido com sucesso\n"
+      "lido BERNEVLDO SEGUND AQUINZENA DE DEZEMBRO.pdf com sucesso\n",
+      "lido DANIEL SEGUNDA QUINZENA DE DEZEMBRO MIOLO.pdf com sucesso\n",
+      "lido DANIEL SEGUNDA QUINZENA SEMANAL DEZEMBRO.pdf com sucesso\n",
+      "lido DANIEL SEGUNDA QUINZENA SEMANAL DEZEMBRO_1.pdf com sucesso\n",
+      "lido LAZARO SEGUNDA QUINZENA DE DEZEMBRO SABADO.pdf com sucesso\n",
+      "lido LAZARO SEGUNDA QUINZENA DE DEZEMBRO SEMANAL.pdf com sucesso\n",
+      "lido LAZRO SEGNDA QUINZENA DESEMBRO MIOLO.pdf com sucesso\n",
+      "lido MARCOS JOSE COELHO 2 QUINZENA DE DEZEMBRO.pdf com sucesso\n",
+      "lido MARIA SAMARA SEGUNDA QUINZENA DE DEZEMBRO.pdf com sucesso\n",
+      "lido nota progresso jose machado dezembro.pdf com sucesso\n",
+      "lido nota_708968 alarme janiero.pdf com sucesso\n",
+      "lido nota_758460 (NFSe) alrme janeiro.pdf com sucesso\n"
      ]
     }
    ],
@@ -568,22 +568,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Não foi possível ler o arquivo NF 53 HZD6008 COLETA FRIOVIX 18 A 29.pdf\n",
-      "Não foi possível ler o arquivo NF 54 HVB8D40 COLETA MOTOCICLO 18-12.pdf\n",
-      "Não foi possível ler o arquivo NF 55 HVB8D40 COLETA E ENTREGA 18 A 29.pdf\n",
-      "Não foi possível ler o arquivo NF 56 KFL5B26 CARRO EXTRA.pdf\n"
+      "lido NF 53 HZD6008 COLETA FRIOVIX 18 A 29.pdf com sucesso\n",
+      "lido NF 54 HVB8D40 COLETA MOTOCICLO 18-12.pdf com sucesso\n",
+      "lido NF 55 HVB8D40 COLETA E ENTREGA 18 A 29.pdf com sucesso\n",
+      "lido NF 56 KFL5B26 CARRO EXTRA.pdf com sucesso\n"
      ]
     }
    ],
    "source": [
     "ExtratordeInfo2(r\"C:\\Users\\jvict\\Documents\\seven\\seven\\ren_fs535455e56edvaldodesouzasilvajunior\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JOÃOPESSOA\n",
+      "DANFSev1.0 (83)3213-7403\n",
+      "DocumentoAuxiliardaNFS-e SEREM.DIFISDIR@JOAOPESSOA.PB.GOV.BR\n",
+      "ChavedeAcessodaNFS-e\n",
+      "25075072223159548000184000000000005424012535082176\n",
+      "NúmerodaNFS-e CompetênciadaNFS-e DataeHoradaemissãodaNFS-e\n",
+      "54 02/01/2024 02/01/202411:05:25\n",
+      "NúmerodaDPS SériedaDPS DataeHoradaemissãodaDPS\n",
+      "60 900 02/01/202411:05:25 AautenticidadedestaNFS-epodeserverificada\n",
+      "pelaleituradestecódigoQRoupelaconsultada\n",
+      "chavedeacessonoportalnacionaldaNFS-e\n",
+      "EMITENTEDANFS-e CNPJ/CPF/NIF InscriçãoMunicipal Telefone\n",
+      "PrestadordoServiço 23.159.548/0001-84 - (83)9985-8336\n",
+      "Nome/NomeEmpresarial E-mail\n",
+      "EDVALDODESOUZASILVAJUNIOR07562256470 -\n",
+      "Endereço Município CEP\n",
+      "ALINASARAIVADEOLIVEIRA,SN JoãoPessoa-PB 58067-256\n",
+      "SimplesNacionalnaDatadeCompetência RegimedeApuraçãoTributáriapeloSN\n",
+      "Optante-MicroempreendedorIndividual(MEI) -\n",
+      "TOMADORDOSERVIÇO CNPJ/CPF/NIF InscriçãoMunicipal Telefone\n",
+      "10.580.938/0010-72 - -\n",
+      "Nome/NomeEmpresarial E-mail\n",
+      "PROGRESSOLOGISTICAETRANSPORTELTDA EDUARDO@HECONTABIL.COM.BR\n",
+      "Endereço Município CEP\n",
+      "IDALETO,00150,SALAA-TERREO JoãoPessoa-PB 58010-140\n",
+      "INTERMEDIÁRIODOSERVIÇONÃOIDENTIFICADONANFS-e\n",
+      "SERVIÇOPRESTADO\n",
+      "CódigodeTributaçãoNacional CódigodeTributaçãoMunicipal LocaldaPrestação PaísdaPrestação\n",
+      "16.02.01-Outrosserviçosde - JoãoPessoa-PB -\n",
+      "transportedenaturezamunicipal.\n",
+      "DescriçãodoServiço\n",
+      "xx\n",
+      "TRIBUTAÇÃOMUNICIPAL\n",
+      "TributaçãodoISSQN PaísResultadodaPrestaçãodoServiço MunicípiodeIncidênciadoISSQN RegimeEspecialdeTributação\n",
+      "OperaçãoTributável - JoãoPessoa-PB Nenhum\n",
+      "TipodeImunidade SuspensãodaExigibilidadedoISSQN NúmeroProcessoSuspensão BenefícioMunicipal\n",
+      "- Não - -\n",
+      "ValordoServiço DescontoIncondicionado TotalDeduções/Reduções CálculodoBM\n",
+      "R$100,00 - - -\n",
+      "BCISSQN AlíquotaAplicada RetençãodoISSQN ISSQNApurado\n",
+      "- - NãoRetido -\n",
+      "TRIBUTAÇÃOFEDERAL\n",
+      "IRRF CP CSLL\n",
+      "- - -\n",
+      "PIS COFINS RetençãodoPIS/COFINS TOTALTRIBUTAÇÃOFEDERAL\n",
+      "- - - -\n",
+      "VALORTOTALDANFS-E\n",
+      "ValordoServiço DescontoCondicionado DescontoIncondicionado ISSQNRetido\n",
+      "R$100,00 R$ R$ -\n",
+      "IRRF,CP,CSLL-Retidos PIS/COFINSRetidos ValorLíquidodaNFS-e\n",
+      "R$0,00 - R$100,00\n",
+      "TOTAISAPROXIMADOSDOSTRIBUTOS\n",
+      "Federais Estaduais Municipais\n",
+      "- - -\n",
+      "INFORMAÇÕESCOMPLEMENTARES\n",
+      "NBS:104031190\n",
+      "23.159.548/0001-84 EDVALDODESOUZASILVAJUNIOR07562256470 PB ALINASARAIVADEOLIVEIRA,SN 54 900 02/01/2024 R$100,00 - R$100,00 - R$100,00 - - - - - R$0,00 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = r\"C:\\Users\\jvict\\Documents\\seven\\seven\\ren_fs535455e56edvaldodesouzasilvajunior\\NF 54 HVB8D40 COLETA MOTOCICLO 18-12.pdf\"\n",
+    "import pdfplumber\n",
+    "\n",
+    "with pdfplumber.open(path) as pdf:\n",
+    "    text = \"\"\n",
+    "    prox = False\n",
+    "    razao = 0\n",
+    "    outra = False\n",
+    "    uf = 0\n",
+    "    notaprox = False\n",
+    "    n_nota = 0\n",
+    "    situacao = 0\n",
+    "    prox_val = False\n",
+    "    proxiss = False\n",
+    "    INSS = 0\n",
+    "    aplicada=False\n",
+    "    for page in pdf.pages:\n",
+    "        text += page.extract_text()\n",
+    "        a = text\n",
+    "        lines = a.split('\\n')\n",
+    "        for line in lines: \n",
+    "            #print(line)\n",
+    "            if lines[1][0:10] == 'DANFSev1.0':\n",
+    "                if aplicada == True:\n",
+    "                    ISS = line.split(' ')[0]\n",
+    "                    aliquota = line.split(' ')[1]\n",
+    "                    aplicada = False\n",
+    "                if proxiss == True:\n",
+    "                    IRRF=line.split(' ')[0]\n",
+    "                    CP=line.split(' ')[0]\n",
+    "                    CSLL=line.split(' ')[0]\n",
+    "                    PIS=line.split(' ')[1]\n",
+    "                    COFINS=line.split(' ')[1]\n",
+    "                    proxiss=False\n",
+    "                if prox_val == True:\n",
+    "                    VALOR_SERVIÇO= line.split(' ')[0]\n",
+    "                    descontos=line.split(' ')[1]\n",
+    "                    deducoes=line.split(' ')[2]\n",
+    "                    Base_calculo=line.split(' ')[3]\n",
+    "                    prox_val=False\n",
+    "                if notaprox == True:\n",
+    "                    if n_nota==0:\n",
+    "                       n_nota = line.split(' ')[0]\n",
+    "                       data = line.split(' ')[1]\n",
+    "                       notaprox = False\n",
+    "                if outra == True:\n",
+    "                    if uf == 0:\n",
+    "                        uf = line.split('-')[1].split(' ')[0]\n",
+    "                        endereco = line.split(' ')[0]\n",
+    "                        municipio = line.split(' ')[1].split('-')[0]\n",
+    "                    outra = False\n",
+    "                if prox == True:\n",
+    "                    if razao == 0:\n",
+    "                        razao = line.split(' ')[0]\n",
+    "                    prox = False\n",
+    "                    line.split\n",
+    "                if 'PrestadordoServiço' in line:\n",
+    "                    cnpj = line.split(' ')[1]\n",
+    "                if 'Nome/NomeEmpresarial E-mail' in line:\n",
+    "                    prox = True\n",
+    "                if 'Endereço Município CEP' in line:\n",
+    "                    outra = True\n",
+    "                if 'NúmerodaNFS-e' in line:\n",
+    "                    notaprox = True\n",
+    "                if 'autenticidadedestaNFS-' in line:\n",
+    "                    serie = line.split(' ')[1]\n",
+    "                if 'TotalDeduções/Reduções CálculodoBM' in line:\n",
+    "                    prox_val = True\n",
+    "                if 'IRRF,CP,CSLL-Retidos' in line:\n",
+    "                    proxiss=True   \n",
+    "                if 'AlíquotaAplicada' in line:\n",
+    "                    aplicada = True\n",
+    "                    \n",
+    "              \n",
+    "print(cnpj,razao,uf,endereco,n_nota,serie,data,VALOR_SERVIÇO ,descontos,VALOR_SERVIÇO,deducoes,VALOR_SERVIÇO,Base_calculo,aliquota,ISS,PIS,COFINS,CSLL,INSS)"
    ]
   },
   {
