atualizações, tirando as exceptions da vfs para teste

--- a/leitor_dos_arquivos_edsson.ipynb
+++ b/leitor_dos_arquivos_edsson.ipynb
@@ -735,6 +735,124 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lançamento_dassa import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('04012024', '05230009006496', '9317', '29806297000169', '0012C3101', '20.0')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "converterXmlServicoToJson(r\"C:\\Users\\jvict\\Documents\\seven\\seven\\nfse_9317_consultar_nfse_resposta_5147723539.xml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup\n",
+    "import json\n",
+    "\n",
+    "\n",
+    "with open(r\"C:\\Users\\jvict\\Documents\\seven\\seven\\nfse_9316_consultar_nfse_resposta_5147723528.xml\", 'r', encoding=\"utf8\") as f:\n",
+    "    data = f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'retu'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[1:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Bs_data = BeautifulSoup(data, \"xml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n",
+       "<return> <ConsultarLoteRpsResposta> <ListaNfse> <CompNfse> <Nfse> <InfNfse id=\"id\"> <Numero>6936</Numero> <CodigoVerificacao>0003E2137</CodigoVerificacao> <DataEmissao>2023-12-12</DataEmissao> <IdentificacaoRps> <Numero>43528</Numero> <Serie>NFSE</Serie> <Tipo>1</Tipo> </IdentificacaoRps> <DataEmissaoRps>2023-12-12</DataEmissaoRps> <NaturezaOperacao>1</NaturezaOperacao> <OptanteSimplesNacional>2</OptanteSimplesNacional> <Competencia>2023-12-01</Competencia> <Servico> <Valores> <ValorServicos>20.0</ValorServicos> <ValorDeducoes>0.0</ValorDeducoes> <ValorPis>0.0</ValorPis> <ValorCofins>0.0</ValorCofins> <ValorInss>0.0</ValorInss> <ValorIr>0.0</ValorIr> <ValorCsll>0.0</ValorCsll> <IssRetido>2</IssRetido> <ValorIss>0.4</ValorIss> <OutrasRetencoes>0.0</OutrasRetencoes> <BaseCalculo>20.0</BaseCalculo> <Aliquota>2.0</Aliquota> <ValorLiquidoNfse>20.0</ValorLiquidoNfse> <ValorIssRetido>0.0</ValorIssRetido> <DescontoCondicionado>0.0</DescontoCondicionado> <DescontoIncondicionado>0.0</DescontoIncondicionado> </Valores> <ItemListaServico>1002</ItemListaServico> <CodigoCnae>7490104</CodigoCnae> <CodigoTributacaoMunicipio>749010400</CodigoTributacaoMunicipio> <Discriminacao>INTERMEDIACAO DE SERVICOS REFERENTE A RECARGA: 19407413. VALOR DA RECARGA: R$ 100.00, EFETUADA EM 12/12/2023Notas Fiscais emitidas em obediencia aos Recursos Especiais (RE s) no 411.580/SP (2002/0014787-2), no 224.813/SP (1999/0067587-8) e no 618.772/RS (2003/0233315-0)</Discriminacao> <CodigoMunicipio>2304285</CodigoMunicipio> </Servico> <PrestadorServico> <IdentificacaoPrestador> <Cnpj>29806297000169</Cnpj> <InscricaoMunicipal>200028796</InscricaoMunicipal> </IdentificacaoPrestador> <RazaoSocial>BEE TECNOLOGIA LTDA</RazaoSocial> <NomeFantasia>BEE HIVE DELIVERY</NomeFantasia> <Endereco>AV  EUSEBIO DE QUEIROZ                       4569</Endereco> <Contato> <Email>CONTATO@BEEDELIVERY.COM.BR</Email> </Contato> </PrestadorServico> <TomadorServico> <IdentificacaoTomador> <CpfCnpj> <Cnpj>05230009001346</Cnpj> </CpfCnpj> <InscricaoMunicipal>0</InscricaoMunicipal> </IdentificacaoTomador> <RazaoSocial>COMERCIAL DRUGSTORE LTDA</RazaoSocial> <Endereco> <Endereco>AVENIDA DOUTOR DURVAL DE GOIS MONTEIRO</Endereco> <Numero>4030</Numero> <Bairro>SANTA LUCIA</Bairro> <CodigoMunicipio>2704302</CodigoMunicipio> <Uf>AL</Uf> <Cep>57082160</Cep> </Endereco> <Contato> <Telefone>82999855991</Telefone> <Email>operacao@farmaciapermanente.com.br</Email> </Contato> </TomadorServico> <OrgaoGerador> <CodigoMunicipio>2304285</CodigoMunicipio> <Uf>CE</Uf> </OrgaoGerador> <ConstrucaoCivil> <CodigoObra/> <Art/> </ConstrucaoCivil> </InfNfse> </Nfse> </CompNfse> </ListaNfse> </ConsultarLoteRpsResposta> </return>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Bs_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'6936'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Bs_data.find('Nfse').text\n",
+    "numero = Bs_data.find('Nfse').text\n",
+    "numero = numero.split(' ')\n",
+    "numero = numero[2]\n",
+    "numero"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
